Fix social button spacing when there are only 2

--- a/_assets/stylesheets/_page.scss
+++ b/_assets/stylesheets/_page.scss
@@ -241,7 +241,12 @@
     flex-direction: row;
     justify-content: space-between;
     .btn {
-      width: 33%;
+      &:first-child {
+        margin-right: 4px;
+      }
+      &:last-child {
+        margin-left: 4px;
+      }
     }
   }
 }
